<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <!-- Event Image -->
        <ImageView
            android:id="@+id/imgEvent"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/event_image"
            android:scaleType="centerCrop"
             />

        <!-- Event Name -->
        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/event_name"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end" />

<!--        &lt;!&ndash; Event Date &ndash;&gt;-->
        <TextView
            android:id="@+id/tvEventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_date"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:layout_marginTop="4dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
