<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    android:padding="16dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@color/backgroundColor"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <!-- Event Image with Rounded Corners inside a FrameLayout -->
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/event_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_background"
                        android:contentDescription="@string/detail_event_image"
                        android:elevation="2dp"
                        android:scaleType="centerCrop" />

                    <!-- Favorite Icon with Shadow for Better Visibility -->
                    <ImageView
                        android:id="@+id/favorite_icon"
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:layout_gravity="end|bottom"
                        android:layout_margin="12dp"
                        android:background="@drawable/fav_background"
                        android:contentDescription="@string/favorite_icon"
                        android:elevation="4dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_favorite_border" />
                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Event Name -->
            <TextView
                android:id="@+id/event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!-- Event Organizer -->
            <TextView
                android:id="@+id/event_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/by_organizer"
                android:textColor="@color/secondaryTextColor"
                android:textSize="16sp"
                android:textStyle="italic" />

            <!-- Date and Quota container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <!-- Event Quota -->
                <TextView
                    android:id="@+id/eventSisaQuota"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/quota_event_quota"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <!-- Event Date and Time -->
                <TextView
                    android:id="@+id/event_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time_time_event"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Event Description -->
            <TextView
                android:id="@+id/event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/description"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <!-- Register Button (Styled) -->
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/primaryTextColor"
        android:text="@string/register_now"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
