<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.home.HomeFragment">

    <!-- NestedScrollView to allow scrolling -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- LinearLayout inside the NestedScrollView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <!-- Title for Dicoding Events -->
            <TextView
                android:id="@+id/tvDicodingEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="@string/dicoding_event"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Subtitle for Recommended Events -->
            <TextView
                android:id="@+id/tvRecommended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/recommended_event_for_you"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp" />

            <!-- Title for Upcoming Events -->
            <TextView
                android:id="@+id/tvUpcomingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/upcoming_event"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- RecyclerView for Horizontal Upcoming Events -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUpcomingEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:scrollbars="horizontal"
                tools:listitem="@layout/item_event"/>

            <!-- Title for Finished Events -->
            <TextView
                android:id="@+id/tvFinishedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/finish_event"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- RecyclerView for Vertical Finished Events -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFinishedEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                tools:listitem="@layout/item_event"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- ProgressBar for loading state -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
